[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "map-my-locations"
version = "0.1.0"
description = "CLI tool to plot location routes on a map"
readme = "README.md"
authors = [{ name="Rishab Sharma", email="rishab.sharma97501@gmail.com" }]
dependencies = ["folium>=0.12.0"]
requires-python = ">=3.7"

[project.scripts]
map-my-locations = "map_my_locations.cli:main"
